--- a/examples/yh568-bighybrid.conf
+++ b/examples/yh568-bighybrid.conf
@@ -1,22 +1,22 @@
-mrsg_reduces 256
+mrsg_reduces 2800
 mrsg_chunk_size 64
-mrsg_input_chunks 1152
+mrsg_input_chunks 6362
 mrsg_dfs_replicas 3
 mrsg_map_slots 2
 mrsg_reduce_slots 2
 mrsg_intermed_perc 0.68651656029929577400
-mrsg_map_task_cost 13.0e+9
-mrsg_reduce_task_cost 6.0e+12
+mrsg_map_task_cost 13e9
+mrsg_reduce_task_cost 6e12
 
-mra_reduces 1020
+mra_reduces 1200
 mra_chunk_size 64
-mra_input_chunks 3456
+mra_input_chunks 2726
 mra_dfs_replicas 5
 mra_map_slots 2
 mra_reduce_slots 2
 mra_intermed_perc 0.68651656029929577400
-perc_num_volatile_node 5
+perc_num_volatile_node 0
 grain_factor 1
-failure_timeout 6.0
-mra_map_task_cost 13.0e+9
-mra_reduce_task_cost 6.0e+12
+failure_timeout 4.0
+mra_map_task_cost 13e9
+mra_reduce_task_cost 6e12
